--- a/localization/english/gui/alertmanager_l_english.yml
+++ b/localization/english/gui/alertmanager_l_english.yml
@@ -20,7 +20,7 @@
   action_dynasty_member_can_marry_combined_unimportant: "$action_dynasty_member_can_marry_unimportant$"
   action_dynasty_member_can_marry_unimportant: "@warning_icon!#X You should focus on marrying off your oldest children"
   action_can_assign_guardian_to_dynasty_kid: "Guardian can be assigned"
-  action_can_assign_guardian_to_dynasty_kid_combined_group_label: "Dynasty children lack Guardians"
+  action_can_assign_guardian_to_dynasty_kid_combined_group_label: "Children lack Guardians"
   action_can_assign_guardian_to_dynasty_kid_combined_group_name: "$action_can_assign_guardian_to_dynasty_kid$"
   action_can_assign_guardian_to_dynasty_kid_desc: "You can designate a [guardian|E] for [recipient.GetShortUIName].$action_can_assign_guardian_to_dynasty_kid_HELP$"
   action_can_assign_guardian_to_dynasty_kid_combined_group_description: "You can designate [guardians|E] for your children.$action_can_assign_guardian_to_dynasty_kid_HELP$"
@@ -33,9 +33,9 @@
   action_can_set_education_focus_to_dynasty_kid: "Child needs an [education_focus|E]"
   action_can_set_education_focus_to_dynasty_kid_label: "[recipient.GetShortUINameNoTooltip] needs an education focus"
   action_can_set_education_focus_to_dynasty_kid_desc: "You can choose an [education_focus|E] for [recipient.GetShortUIName].\n\n$FOCUS_BELOW_MIN_AGE$"
-  action_can_set_education_focus_to_dynasty_kid_combined_group_label: "Dynasty children need education focus"
+  action_can_set_education_focus_to_dynasty_kid_combined_group_label: "Children need education focus"
   action_can_set_education_focus_to_dynasty_kid_combined_group_name: "Children need an [education_focus|E]."
-  action_can_set_education_focus_to_dynasty_kid_combined_group_description: "You can choose [education_focus|E] for children of your dynasty."
+  action_can_set_education_focus_to_dynasty_kid_combined_group_description: "You can choose [education_focus|E] for children."
   action_can_set_education_focus_to_dynasty_kid_combined_label: "Your [actor.Custom2('RelationToMe', recipient)], [recipient.GetShortUINameNoTooltip]"
   action_can_set_education_focus_to_dynasty_kid_click: "#I Click to choose an [education_focus|E] for [recipient.GetHerHim]#!"
   action_dynasty_member_can_be_landed: "[recipient.GetShortUINameNoTooltip] can be landed"
@@ -102,12 +102,18 @@
   alertmanager_widget_hook_tooltip: ""
   alertmanager_widget_education: "Enable education alerts"
   alertmanager_widget_education_tooltip: ""
-  alertmanager_widget_educationdynasty: "$alertmanager_widget_marriagedynasty$"
-  alertmanager_widget_educationdynasty_tooltip: ""
-  alertmanager_widget_gardian: "To assign [guardians|El]"
-  alertmanager_widget_gardian_tooltip: ""
-  alertmanager_widget_focus: "To modify the [education_focus|El]"
-  alertmanager_widget_focus_tooltip: ""
+  alertmanager_widget_education_dynasty: "$alertmanager_widget_marriagedynasty$"
+  alertmanager_widget_education_dynasty_tooltip: ""
+  alertmanager_widget_gardian_dynasty: "To assign [guardians|El]"
+  alertmanager_widget_gardian_dynasty_tooltip: ""
+  alertmanager_widget_focus_dynasty: "To modify the [education_focus|El]"
+  alertmanager_widget_focus_dynasty_tooltip: ""
+  alertmanager_widget_education_courtier: "$alertmanager_widget_marriagecourtier$"
+  alertmanager_widget_education_courtier_tooltip: ""
+  alertmanager_widget_gardian_courtier: "$alertmanager_widget_gardian_dynasty$"
+  alertmanager_widget_gardian_courtier_tooltip: ""
+  alertmanager_widget_focus_courtier: "$alertmanager_widget_focus_dynasty$"
+  alertmanager_widget_focus_courtier_tooltip: ""
   alertmanager_widget_marriage: "Enable [marriage|El] alerts"
   alertmanager_widget_marriage_tooltip: ""
   alertmanager_widget_marriagedynasty: "For members of your [dynasty|El]"
@@ -118,10 +124,19 @@
   alertmanager_widget_marriageadult_tooltip: ""
   alertmanager_widget_marriagecourtier: "For members of your [court|El]"
   alertmanager_widget_marriagecourtier_tooltip: ""
-  alertmanager_widget_marriagecourtier_unworthy: "Only [courtiers|El] with traits [congenital|El]"
-  alertmanager_widget_marriagecourtier_unworthy_tooltip: ""
-  alertmanager_widget_marriagecourtier_infertile: "Ignore infertile courtiers"
-  alertmanager_widget_marriagecourtier_infertile_tooltip: ""
+
+  alertmanager_widget_marriagedynasty_closefamily: "Only [close_family|El]"
+  alertmanager_widget_marriagedynasty_closefamily_tooltip: ""
+  alertmanager_widget_marriageboy: "For men"
+  alertmanager_widget_marriageboy_tooltip: ""
+  alertmanager_widget_marriagegirl: "For women"
+  alertmanager_widget_marriagegirl_tooltip: ""
+
+  alertmanager_widget_marriage_unworthy: "Only with traits [congenital|El]"
+  alertmanager_widget_marriage_unworthy_tooltip: ""
+  alertmanager_widget_marriage_infertile: "Ignore infertile courtiers"
+  alertmanager_widget_marriage_infertile_tooltip: ""
+
   alertmanager_widget_give_lands: "Enable alerts to give [titles|El] to members of your [dynasty|El]"
   alertmanager_widget_give_lands_tooltip: ""
   alertmanager_widget_convert: "Enable conversion alerts"
@@ -134,5 +149,10 @@
   alertmanager_widget_convert_subvassal_tooltip: ""
   alertmanager_widget_convert_baron: "Ignore [barons|E] & Mayors"
   alertmanager_widget_convert_baron_tooltip: ""
-  alertmanager_widget_witchcraft: "Activate alerts to convince your [dynasty|El] to worship the Horned God."
+  alertmanager_widget_witchcraft: "Enable alerts to convert your [dynasty|El] to [GetTrait('witch').GetName( GetPlayer )]"
   alertmanager_widget_witchcraft_tooltip: ""
+  alertmanager_widget_witchcraftwithcoven: "And continue after the creation of the witch coven"
+  alertmanager_widget_witchcraftwithcoven_tooltip: ""
+
+alertmanager_widget_invite_knights: "Invite Better Knights"
+alertmanager_widget_invite_knights_tooltip: "There are knights available for invitation who are better than your worst knight."
