--- a/localization/french/gui/alertmanager_l_french.yml
+++ b/localization/french/gui/alertmanager_l_french.yml
@@ -20,7 +20,7 @@
   action_dynasty_member_can_marry_combined_unimportant: "$action_dynasty_member_can_marry_unimportant$"
   action_dynasty_member_can_marry_unimportant: "@warning_icon!#X Vous devriez commencer par marier vos aînés"
   action_can_assign_guardian_to_dynasty_kid: "Un tuteur peut être assigné"
-  action_can_assign_guardian_to_dynasty_kid_combined_group_label: "Plusieurs enfants de votre dynastie n'ont pas de tuteur"
+  action_can_assign_guardian_to_dynasty_kid_combined_group_label: "Plusieurs enfants n'ont pas de tuteur"
   action_can_assign_guardian_to_dynasty_kid_combined_group_name: "$action_can_assign_guardian_to_dynasty_kid$"
   action_can_assign_guardian_to_dynasty_kid_desc: "Vous pouvez assigner un [guardian|El] pour [recipient.GetShortUIName].$action_can_assign_guardian_to_dynasty_kid_HELP$"
   action_can_assign_guardian_to_dynasty_kid_combined_group_description: "Vous pouvez assigner un [guardian|El] pour votre enfant.$action_can_assign_guardian_to_dynasty_kid_HELP$"
@@ -33,9 +33,9 @@
   action_can_set_education_focus_to_dynasty_kid: "L'enfant a besoin d'un [education_focus|El]"
   action_can_set_education_focus_to_dynasty_kid_label: "[recipient.GetShortUINameNoTooltip] a besoin d'un intérêt d'éducation"
   action_can_set_education_focus_to_dynasty_kid_desc: "Vous pouvez choisir un [education_focus|El] pour [recipient.GetShortUIName].\n\n$FOCUS_BELOW_MIN_AGE$"
-  action_can_set_education_focus_to_dynasty_kid_combined_group_label: "Des enfants de votre dynastie requièrent un intérêt d'éducation"
+  action_can_set_education_focus_to_dynasty_kid_combined_group_label: "Des enfants requièrent un intérêt d'éducation"
   action_can_set_education_focus_to_dynasty_kid_combined_group_name: "Des enfants ont besoin d'un [education_focus|El]."
-  action_can_set_education_focus_to_dynasty_kid_combined_group_description: "Vous pouvez choisir un [education_focus|El] pour des enfants de votre dynastie."
+  action_can_set_education_focus_to_dynasty_kid_combined_group_description: "Vous pouvez choisir un [education_focus|El] pour des enfants."
   action_can_set_education_focus_to_dynasty_kid_combined_label: "Votre [actor.Custom2('RelationToMe', recipient)], [recipient.GetShortUINameNoTooltip]"
   action_can_set_education_focus_to_dynasty_kid_click: "#I Cliquez pour choisir un [education_focus|El] pour [recipient.Custom('FR_LuiElle')]#!"
   action_dynasty_member_can_be_landed: "[recipient.GetShortUINameNoTooltip] peut obtenir des terres"
@@ -102,12 +102,18 @@
   alertmanager_widget_hook_tooltip: ""
   alertmanager_widget_education: "Active les alertes d'éducation"
   alertmanager_widget_education_tooltip: ""
-  alertmanager_widget_educationdynasty: "$alertmanager_widget_marriagedynasty$"
-  alertmanager_widget_educationdynasty_tooltip: ""
-  alertmanager_widget_gardian: "Pour affecter des [guardians|El]"
-  alertmanager_widget_gardian_tooltip: ""
-  alertmanager_widget_focus: "Pour modifier les [education_focus|El]"
-  alertmanager_widget_focus_tooltip: ""
+  alertmanager_widget_education_dynasty: "$alertmanager_widget_marriagedynasty$"
+  alertmanager_widget_education_dynasty_tooltip: ""
+  alertmanager_widget_gardian_dynasty: "Pour affecter des [guardians|El]"
+  alertmanager_widget_gardian_dynasty_tooltip: ""
+  alertmanager_widget_focus_dynasty: "Pour modifier les [education_focus|El]"
+  alertmanager_widget_focus_dynasty_tooltip: ""
+  alertmanager_widget_education_courtier: "$alertmanager_widget_marriagecourtier$"
+  alertmanager_widget_education_courtier_tooltip: ""
+  alertmanager_widget_gardian_courtier: "$alertmanager_widget_gardian_dynasty$"
+  alertmanager_widget_gardian_courtier_tooltip: ""
+  alertmanager_widget_focus_courtier: "$alertmanager_widget_focus_dynasty$"
+  alertmanager_widget_focus_courtier_tooltip: ""
   alertmanager_widget_marriage: "Active les alertes de [marriage|El]"
   alertmanager_widget_marriage_tooltip: ""
   alertmanager_widget_marriagedynasty: "Pour les membres de votre [dynasty|El]"
@@ -118,10 +124,19 @@
   alertmanager_widget_marriageadult_tooltip: ""
   alertmanager_widget_marriagecourtier: "Pour les membres de votre [court|El]"
   alertmanager_widget_marriagecourtier_tooltip: ""
-  alertmanager_widget_marriagecourtier_unworthy: "Uniquement les [courtiers|El] avec des traits [Concept( 'congenital', 'congénitaux' )|El]"
-  alertmanager_widget_marriagecourtier_unworthy_tooltip: ""
-  alertmanager_widget_marriagecourtier_infertile: "Ignorer les [courtiers|El] stériles"
-  alertmanager_widget_marriagecourtier_infertile_tooltip: ""
+
+  alertmanager_widget_marriagedynasty_closefamily: "Uniquement [close_family|El]"
+  alertmanager_widget_marriagedynasty_closefamily_tooltip: ""
+  alertmanager_widget_marriageboy: "Pour les hommes"
+  alertmanager_widget_marriageboy_tooltip: ""
+  alertmanager_widget_marriagegirl: "Pour les femmes"
+  alertmanager_widget_marriagegirl_tooltip: ""
+
+  alertmanager_widget_marriage_unworthy: "Uniquement avec des traits [Concept( 'congenital', 'congénitaux' )|El]"
+  alertmanager_widget_marriage_unworthy_tooltip: ""
+  alertmanager_widget_marriage_infertile: "Ignorer les stériles"
+  alertmanager_widget_marriage_infertile_tooltip: ""
+
   alertmanager_widget_give_lands: "Activer les alertes pour donner des [titles|El] a des membres de votre [dynasty|El]"
   alertmanager_widget_give_lands_tooltip: ""
   alertmanager_widget_convert: "Activer les alertes de convertion"
@@ -134,5 +149,10 @@
   alertmanager_widget_convert_subvassal_tooltip: "Les vassaux des vassaux"
   alertmanager_widget_convert_baron: "Ignorer les [barons|El] et bourgmestres"
   alertmanager_widget_convert_baron_tooltip: ""
-  alertmanager_widget_witchcraft: "Activer les alertes pour convaincre votre [dynasty|El] d'adorer le Dieu Cornu."
+  alertmanager_widget_witchcraft: "Activer les alertes pour convertir votre [dynasty|El] en [GetTrait('witch').GetName( GetPlayer )]"
   alertmanager_widget_witchcraft_tooltip: ""
+  alertmanager_widget_witchcraftwithcoven: "Et continuer après la création de l'assemblée des sorcière "
+  alertmanager_widget_witchcraftwithcoven_tooltip: ""
+
+alertmanager_widget_invite_knights: "Inviter de meilleurs chevaliers"
+alertmanager_widget_invite_knights_tooltip: "Il y a des chevaliers disponibles pour invitation qui sont meilleurs que votre pire chevalier."
