--- a/localization/russian/gui/alertmanager_l_russian.yml
+++ b/localization/russian/gui/alertmanager_l_russian.yml
@@ -20,7 +20,7 @@
   action_dynasty_member_can_marry_combined_unimportant: "$action_dynasty_member_can_marry_unimportant$"
   action_dynasty_member_can_marry_unimportant: "@warning_icon!#X Постарайтесь устроить брак кому-то из старших детей"
   action_can_assign_guardian_to_dynasty_kid: "Можно назначить опекуна"
-  action_can_assign_guardian_to_dynasty_kid_combined_group_label: "Детям династии требуются опекуны"
+  action_can_assign_guardian_to_dynasty_kid_combined_group_label: "Детям не хватает Хранителей"
   action_can_assign_guardian_to_dynasty_kid_combined_group_name: "$action_can_assign_guardian_to_dynasty_kid$"
   action_can_assign_guardian_to_dynasty_kid_desc: "Вы можете решить, какого [Concept( 'guardian', 'опекуна' )|E] получит [recipient.GetShortUIName].$action_can_assign_guardian_to_dynasty_kid_HELP$"
   action_can_assign_guardian_to_dynasty_kid_combined_group_description: "Вы можете назначить [Concept( 'guardians', 'опекунов' )|E] вашим детям.$action_can_assign_guardian_to_dynasty_kid_HELP$"
@@ -33,9 +33,9 @@
   action_can_set_education_focus_to_dynasty_kid: "Ребенок нуждается в [Concept( 'education_focus', 'фокусе образования' )|E]"
   action_can_set_education_focus_to_dynasty_kid_label: "[recipient.GetShortUINameNoTooltip] нуждается в фокусе образования"
   action_can_set_education_focus_to_dynasty_kid_desc: "Вы можете выбрать [education_focus|El] для [recipient.GetShortUIName].\\n\\n$FOCUS_BELOW_MIN_AGE$"
-  action_can_set_education_focus_to_dynasty_kid_combined_group_label: "Дети династии нуждаются в фокусе образования"
+  action_can_set_education_focus_to_dynasty_kid_combined_group_label: "Детям нужен фокус на образование"
   action_can_set_education_focus_to_dynasty_kid_combined_group_name: "Ребенок нуждается в [Concept( 'education_focus', 'фокусе образования' )|E]."
-  action_can_set_education_focus_to_dynasty_kid_combined_group_description: "Вы можете выбрать [education_focus|El] для детей вашей династии."
+  action_can_set_education_focus_to_dynasty_kid_combined_group_description: "Вы можете выбрать [education_focus|E] для детей."
   action_can_set_education_focus_to_dynasty_kid_combined_label: "Ваш [actor.Custom2('RelationToMe', recipient)], [recipient.GetShortUINameNoTooltip]"
   action_can_set_education_focus_to_dynasty_kid_click: "#I Нажмите, чтобы выбрать [recipient.GetHerHim] [education_focus|El]#!"
   action_dynasty_member_can_be_landed: "[recipient.GetShortUINameNoTooltip] может получить титулы"
@@ -102,12 +102,18 @@
   alertmanager_widget_hook_tooltip: ""
   alertmanager_widget_education: "Включить оповещения об образовании"
   alertmanager_widget_education_tooltip: ""
-  alertmanager_widget_educationdynasty: "$alertmanager_widget_marriagedynasty$"
-  alertmanager_widget_educationdynasty_tooltip: ""
-  alertmanager_widget_gardian: "Назначить [guardians|El]"
-  alertmanager_widget_gardian_tooltip: ""
-  alertmanager_widget_focus: "Чтобы изменить [education_focus|El]"
-  alertmanager_widget_focus_tooltip: ""
+  alertmanager_widget_education_dynasty: "$alertmanager_widget_marriagedynasty$"
+  alertmanager_widget_education_dynasty_tooltip: ""
+  alertmanager_widget_gardian_dynasty: "Назначить [guardians|El]"
+  alertmanager_widget_gardian_dynasty_tooltip: ""
+  alertmanager_widget_focus_dynasty: "Чтобы изменить [education_focus|El]"
+  alertmanager_widget_focus_dynasty_tooltip: ""
+  alertmanager_widget_education_courtier: "$alertmanager_widget_marriagecourtier$"
+  alertmanager_widget_education_courtier_tooltip: ""
+  alertmanager_widget_gardian_courtier: "$alertmanager_widget_gardian_dynasty$"
+  alertmanager_widget_gardian_courtier_tooltip: ""
+  alertmanager_widget_focus_courtier: "$alertmanager_widget_focus_dynasty$"
+  alertmanager_widget_focus_courtier_tooltip: ""
   alertmanager_widget_marriage: "Включить оповещения [marriage|El]"
   alertmanager_widget_marriage_tooltip: ""
   alertmanager_widget_marriagedynasty: "Для членов вашей [dynasty|El]"
@@ -118,10 +124,24 @@
   alertmanager_widget_marriageadult_tooltip: ""
   alertmanager_widget_marriagecourtier: "Для членов вашего [court|El]"
   alertmanager_widget_marriagecourtier_tooltip: ""
-  alertmanager_widget_marriagecourtier_unworthy: "Только [courtiers|El] с чертами [congenital|El]"
-  alertmanager_widget_marriagecourtier_unworthy_tooltip: ""
-  alertmanager_widget_marriagecourtier_infertile: "Игнорировать бесплодных придворных"
-  alertmanager_widget_marriagecourtier_infertile_tooltip: ""
+
+  #alertmanager_widget_marriagecourtier_unworthy: "Только [courtiers|El] с чертами [congenital|El]"
+  #alertmanager_widget_marriagecourtier_unworthy_tooltip: ""
+  #alertmanager_widget_marriagecourtier_infertile: "Игнорировать бесплодных придворных"
+  #alertmanager_widget_marriagecourtier_infertile_tooltip: ""
+
+  alertmanager_widget_marriagedynasty_closefamily: "Only [close_family|El]"
+  alertmanager_widget_marriagedynasty_closefamily_tooltip: ""
+  alertmanager_widget_marriageboy: "For men"
+  alertmanager_widget_marriageboy_tooltip: ""
+  alertmanager_widget_marriagegirl: "For women"
+  alertmanager_widget_marriagegirl_tooltip: ""
+
+  alertmanager_widget_marriage_unworthy: "Only with traits [congenital|El]"
+  alertmanager_widget_marriage_unworthy_tooltip: ""
+  alertmanager_widget_marriage_infertile: "Ignore infertile courtiers"
+  alertmanager_widget_marriage_infertile_tooltip: ""
+
   alertmanager_widget_give_lands: "Включите оповещения, чтобы дать [titles|El] членам вашей [dynasty|El]"
   alertmanager_widget_give_lands_tooltip: ""
   alertmanager_widget_convert: "Включить оповещения о конверсиях"
@@ -134,5 +154,10 @@
   alertmanager_widget_convert_subvassal_tooltip: ""
   alertmanager_widget_convert_baron: "Игнорировать баронов и мэров"
   alertmanager_widget_convert_baron_tooltip: ""
-  alertmanager_widget_witchcraft: "Активируйте оповещения, чтобы убедить свою [dynasty|El] поклоняться Рогатому Богу."
+  alertmanager_widget_witchcraft: "Включите оповещения, чтобы преобразовать вашу [dynasty|El] в [GetTrait('witch').GetName( GetPlayer )]"
   alertmanager_widget_witchcraft_tooltip: ""
+  alertmanager_widget_witchcraftwithcoven: "И продолжить после создания Ковен ведьм"
+  alertmanager_widget_witchcraftwithcoven_tooltip: ""
+
+alertmanager_widget_invite_knights: "Пригласить лучших рыцарей"
+alertmanager_widget_invite_knights_tooltip: "Есть рыцари, доступные для приглашения, которые лучше вашего худшего рыцаря."
