--- a/localization/simp_chinese/gui/alertmanager_l_simp_chinese.yml
+++ b/localization/simp_chinese/gui/alertmanager_l_simp_chinese.yml
@@ -20,7 +20,7 @@
   action_dynasty_member_can_marry_combined_unimportant: "$action_dynasty_member_can_marry_unimportant$"
   action_dynasty_member_can_marry_unimportant: "@warning_icon!#X 你应该注意你成年孩子的婚姻"
   action_can_assign_guardian_to_dynasty_kid: "可以指派监护人"
-  action_can_assign_guardian_to_dynasty_kid_combined_group_label: "宫廷中有孩子缺少监护人"
+  action_can_assign_guardian_to_dynasty_kid_combined_group_label: "孩子缺乏监护人"
   action_can_assign_guardian_to_dynasty_kid_combined_group_name: "$action_can_assign_guardian_to_dynasty_kid$"
   action_can_assign_guardian_to_dynasty_kid_desc: "你可以指派一名[guardian|E]为[recipient.GetShortUIName].$action_can_assign_guardian_to_dynasty_kid_HELP$"
   action_can_assign_guardian_to_dynasty_kid_combined_group_description: "你可以指派一名[guardians|E]为你的孩子。$action_can_assign_guardian_to_dynasty_kid_HELP$"
@@ -33,14 +33,14 @@
   action_can_set_education_focus_to_dynasty_kid: "孩子需要一名[education_focus|E]"
   action_can_set_education_focus_to_dynasty_kid_label: "[recipient.GetShortUINameNoTooltip]需要选择教育重心"
   action_can_set_education_focus_to_dynasty_kid_desc: "你可以指派一名[education_focus|E]为[recipient.GetShortUIName]。\n\n$FOCUS_BELOW_MIN_AGE$"
-  action_can_set_education_focus_to_dynasty_kid_combined_group_label: "宫廷中有孩子需要选择教育重心"
+  action_can_set_education_focus_to_dynasty_kid_combined_group_label: "孩子需要教育重点"
   action_can_set_education_focus_to_dynasty_kid_combined_group_name: "孩子需要一名[education_focus|E]"
-  action_can_set_education_focus_to_dynasty_kid_combined_group_description: "你可以指派[education_focus|E]为你宫廷中的孩子。"
+  action_can_set_education_focus_to_dynasty_kid_combined_group_description: "儿童可以选择[education_focus|E]。"
   action_can_set_education_focus_to_dynasty_kid_combined_label: "你的[actor.Custom2('RelationToMe', recipient)]，[recipient.GetShortUINameNoTooltip]"
   action_can_set_education_focus_to_dynasty_kid_click: "#I 点击指派一名[education_focus|E]为[recipient.GetHerHim]#!"
   action_dynasty_member_can_be_landed: "[recipient.GetShortUINameNoTooltip]可以授予头衔"
   action_dynasty_member_can_be_landed_label: "$action_dynasty_member_can_be_landed$"
-  action_dynasty_member_can_be_landed_desc: "你的[actor.Custom2('RelationToMe', recipient)] [recipient.GetShortUIName]想要一些不重要的头衔来成为[recipient.GetHerselfHimself]。"
+  action_dynasty_member_can_be_landed_desc: "你的[actor.Custom2('RelationToMe', recipient)] [recipient.GetShortUIName]想要一些不重要的头衔来成为[recipient.GetHerselfHimself]"
   action_dynasty_member_can_be_landed_click: "#I 点击授予一些你的头衔#!"
   action_dynasty_member_can_be_landed_combined_group_name: "宗族成员可以授予头衔"
   action_dynasty_member_can_be_landed_combined_group_label: "宗族成员可以授予头衔"
@@ -62,77 +62,102 @@
   action_marry_off_courtiers_desc: "你的[actor.Custom2('RelationToMe', recipient)] [recipient.GetShortUIName]符合结婚条件。\n\n#help 安排合适的[marriage|E]为[recipient.GetHerHim]有益于你的[court|E]。#!\n"
   action_marry_off_courtiers_click: "#I 点击查找合适的[spouse|E]#!"
   action_marry_off_courtiers_combined_label: "[recipient.GetRelationToString( GetPlayer )], [recipient.GetShortUINameNoTooltip]"
-  action_marry_off_courtiers_combined_group_name: "你的庭臣可以结婚"
+  action_marry_off_courtiers_combined_group_name: "你的廷臣可以结婚"
   action_marry_off_courtiers_combined_group_label: "$action_marry_off_courtiers_combined_group_name$"
   action_marry_off_courtiers_combined_group_description: "你的几个[courtier|E]可以结婚。\n\n#help 安排合适的[marriages|E]有益于你的[court|E]。#!"
 
-  action_convert_courtiers: "[recipient.GetShortUINameNoTooltip] can be converted"
+  action_convert_courtiers: "[recipient.GetShortUINameNoTooltip]可以改信"
   action_convert_courtiers_label: "$action_convert_courtiers$"
-  action_convert_courtiers_desc: "Your [actor.Custom2('RelationToMe', recipient)] [recipient.GetShortUIName] can be converted to [actor.GetFaith.GetName|V]"
-  action_convert_courtiers_click: "#I Click to demand conversion#!"
+  action_convert_courtiers_desc: "你的[actor.Custom2('RelationToMe', recipient)] [recipient.GetShortUIName]可以改信为[actor.GetFaith.GetName|V]。"
+  action_convert_courtiers_click: "#I 点击要求改信#!"
   action_convert_courtiers_combined_label: "[recipient.GetRelationToString( GetPlayer )], [recipient.GetShortUINameNoTooltip]"
-  action_convert_courtiers_combined_group_name: "Your courtiers can be converted"
+  action_convert_courtiers_combined_group_name: "你的[actor.Custom2('RelationToMe', recipient)]可以改信"
   action_convert_courtiers_combined_group_label: "$action_convert_courtiers_combined_group_name$"
-  action_convert_courtiers_combined_group_description: "Several of your courtiers can be converted to [actor.GetFaith.GetName|V]"
+  action_convert_courtiers_combined_group_description: "你的几个[actor.Custom2('RelationToMe', recipient)]可以改信为[actor.GetFaith.GetName|V]"
 
-  action_convert_vassals: "[recipient.GetShortUINameNoTooltip] can be converted"
+  action_convert_vassals: "[recipient.GetShortUINameNoTooltip]可以改信。"
   action_convert_vassals_label: "$action_convert_vassals$"
-  action_convert_vassals_desc: "Your [actor.Custom2('RelationToMe', recipient)] [recipient.GetShortUIName] can be converted to [actor.GetFaith.GetName|V]"
-  action_convert_vassals_click: "#I Click to demand conversion#!"
+  action_convert_vassals_desc: "你的[actor.Custom2('RelationToMe', recipient)] [recipient.GetShortUIName]可以改信为[actor.GetFaith.GetName|V]。"
+  action_convert_vassals_click: "#I 点击要求改信#!"
   action_convert_vassals_combined_label: "[recipient.GetRelationToString( GetPlayer )], [recipient.GetShortUINameNoTooltip]"
-  action_convert_vassals_combined_group_name: "Your vassals can be converted"
+  action_convert_vassals_combined_group_name: "您的[actor.Custom2('RelationToMe', recipient)]可以改信"
   action_convert_vassals_combined_group_label: "$action_convert_vassals_combined_group_name$"
-  action_convert_vassals_combined_group_description: "Several of your vassals can be converted to [actor.GetFaith.GetName|V]"
+  action_convert_vassals_combined_group_description: "您的几个[actor.Custom2('RelationToMe', recipient)]可以改信为[actor.GetFaith.GetName|V]。"
 
-  alertmanager_VIEW_TITLE: "Alerts Manager"
-  alertmanager_button_tt: "#T Open the Alerts Manager"
+  alertmanager_VIEW_TITLE: "提醒管理器"
+  alertmanager_button_tt: "#T 打开提醒管理器"
 
-  alertmanager_title_invitations: "邀请来宫廷"
+  alertmanager_title_invitations: "邀至宫廷"
   alertmanager_title_education: "教育孩子"
   alertmanager_title_marriage: "安排婚姻"
   alertmanager_title_give_lands: "授予头衔"
-  alertmanager_title_convert: "转换"
+  alertmanager_title_convert: "改变信仰"
   alertmanager_title_witchcraft: "转修巫术"
 
-  alertmanager_widget_invitations: "Enable invite alerts"
+  alertmanager_widget_invitations: "启用邀请提醒"
   alertmanager_widget_invitations_tooltip: ""
   alertmanager_widget_invitationsdynasty: "$alertmanager_widget_marriagedynasty$"
   alertmanager_widget_invitationsdynasty_tooltip: ""
-  alertmanager_widget_hook: "And also for members who can be invited with a [hook|El]"
+  alertmanager_widget_hook: "可以被[hook|El]邀请的成员"
   alertmanager_widget_hook_tooltip: ""
-  alertmanager_widget_education: "Enable education alerts"
+  alertmanager_widget_education: "启用教育提醒"
   alertmanager_widget_education_tooltip: ""
-  alertmanager_widget_educationdynasty: "$alertmanager_widget_marriagedynasty$"
-  alertmanager_widget_educationdynasty_tooltip: ""
-  alertmanager_widget_gardian: "To assign [guardians|El]"
-  alertmanager_widget_gardian_tooltip: ""
-  alertmanager_widget_focus: "To modify the [education_focus|El]"
-  alertmanager_widget_focus_tooltip: ""
-  alertmanager_widget_marriage: "Enable [marriage|El] alerts"
+  alertmanager_widget_education_dynasty: "$alertmanager_widget_marriagedynasty$"
+  alertmanager_widget_education_dynasty_tooltip: ""
+  alertmanager_widget_gardian_dynasty: "指派[guardians|El]"
+  alertmanager_widget_gardian_dynasty_tooltip: ""
+  alertmanager_widget_focus_dynasty: "设置[education_focus|El]"
+  alertmanager_widget_focus_dynasty_tooltip: ""
+  alertmanager_widget_education_courtier: "$alertmanager_widget_marriagecourtier$"
+  alertmanager_widget_education_courtier_tooltip: ""
+  alertmanager_widget_gardian_courtier: "$alertmanager_widget_gardian_dynasty$"
+  alertmanager_widget_gardian_courtier_tooltip: ""
+  alertmanager_widget_focus_courtier: "$alertmanager_widget_focus_dynasty$"
+  alertmanager_widget_focus_courtier_tooltip: ""
+  alertmanager_widget_marriage: "启用[marriage|El]提醒"
   alertmanager_widget_marriage_tooltip: ""
-  alertmanager_widget_marriagedynasty: "For members of your [dynasty|El]"
+  alertmanager_widget_marriagedynasty: "您的[dynasty|El]成员"
   alertmanager_widget_marriagedynasty_tooltip: ""
-  alertmanager_widget_marriagechild: "For the [children|El]"
+  alertmanager_widget_marriagechild: "[children|El]"
   alertmanager_widget_marriagechild_tooltip: ""
-  alertmanager_widget_marriageadult: "For [adults|El]"
+  alertmanager_widget_marriageadult: "[adults|El]"
   alertmanager_widget_marriageadult_tooltip: ""
-  alertmanager_widget_marriagecourtier: "For members of your [court|El]"
+  alertmanager_widget_marriagecourtier: "您的[court|El]成员"
   alertmanager_widget_marriagecourtier_tooltip: ""
-  alertmanager_widget_marriagecourtier_unworthy: "Only [courtiers|El] with traits [congenital|El]"
-  alertmanager_widget_marriagecourtier_unworthy_tooltip: ""
-  alertmanager_widget_marriagecourtier_infertile: "忽略不孕者"  
-  alertmanager_widget_marriagecourtier_infertile_tooltip: ""
-  alertmanager_widget_give_lands: "Enable alerts to give [titles|El] to members of your [dynasty|El]"
+
+  #alertmanager_widget_marriagecourtier_unworthy: "拥有[congenital|El]特质的[courtiers|El]"
+  #alertmanager_widget_marriagecourtier_unworthy_tooltip: ""
+  #alertmanager_widget_marriagecourtier_infertile: "忽略不孕者"  
+  #alertmanager_widget_marriagecourtier_infertile_tooltip: ""
+
+  alertmanager_widget_marriagedynasty_closefamily: "Only [close_family|El]"
+  alertmanager_widget_marriagedynasty_closefamily_tooltip: ""
+  alertmanager_widget_marriageboy: "For men"
+  alertmanager_widget_marriageboy_tooltip: ""
+  alertmanager_widget_marriagegirl: "For women"
+  alertmanager_widget_marriagegirl_tooltip: ""
+
+  alertmanager_widget_marriage_unworthy: "Only with traits [congenital|El]"
+  alertmanager_widget_marriage_unworthy_tooltip: ""
+  alertmanager_widget_marriage_infertile: "Ignore infertile courtiers"
+  alertmanager_widget_marriage_infertile_tooltip: ""
+
+  alertmanager_widget_give_lands: "将[titles|El]授予您的[dynasty|El]成员"
   alertmanager_widget_give_lands_tooltip: ""
-  alertmanager_widget_convert: "Enable conversion alerts"
+  alertmanager_widget_convert: "启用改信提醒"
   alertmanager_widget_convert_tooltip: ""
   alertmanager_widget_convert_courtier: "$alertmanager_widget_marriagecourtier$"
   alertmanager_widget_convert_courtier_tooltip: ""
-  alertmanager_widget_convert_vassal: "For your [vassals|El]"
+  alertmanager_widget_convert_vassal: "您的[vassals|El]"
   alertmanager_widget_convert_vassal_tooltip: ""
-  alertmanager_widget_convert_subvassal: "Ignore Subvassals"
+  alertmanager_widget_convert_subvassal: "忽略附属"
   alertmanager_widget_convert_subvassal_tooltip: ""
-  alertmanager_widget_convert_baron: "Ignore [barons|E] & Mayors"
+  alertmanager_widget_convert_baron: "忽略[barons|E]和市长"
   alertmanager_widget_convert_baron_tooltip: ""
-  alertmanager_widget_witchcraft: "Activate alerts to convince your [dynasty|El] to worship the Horned God."
+  alertmanager_widget_witchcraft: "您的[dynasty|El]成员可以转修为[GetTrait('witch').GetName( GetPlayer )]"
   alertmanager_widget_witchcraft_tooltip: ""
+  alertmanager_widget_witchcraftwithcoven: "女巫集会创建后继续启用提醒"
+  alertmanager_widget_witchcraftwithcoven_tooltip: ""
+
+alertmanager_widget_invite_knights: "邀请更好的骑士"
+alertmanager_widget_invite_knights_tooltip: "有些可邀请的骑士比你最差的骑士更好。"
