--- a/localization/spanish/gui/alertmanager_l_spanish.yml
+++ b/localization/spanish/gui/alertmanager_l_spanish.yml
@@ -20,7 +20,7 @@
   action_dynasty_member_can_marry_combined_unimportant: "$action_dynasty_member_can_marry_unimportant$"
   action_dynasty_member_can_marry_unimportant: "@warning_icon!#X Deberias enfocarte en casar a tus hijos mas viejos"
   action_can_assign_guardian_to_dynasty_kid: "Se puede asignar un guardia"
-  action_can_assign_guardian_to_dynasty_kid_combined_group_label: "Los niños de la dinastía carecen de guardias"
+  action_can_assign_guardian_to_dynasty_kid_combined_group_label: "Los niños carecen de guardias"
   action_can_assign_guardian_to_dynasty_kid_combined_group_name: "$action_can_assign_guardian_to_dynasty_kid$"
   action_can_assign_guardian_to_dynasty_kid_desc: "Puedes designar un [guardian|E] para [recipient.GetShortUIName].$action_can_assign_guardian_to_dynasty_kid_HELP$"
   action_can_assign_guardian_to_dynasty_kid_combined_group_description: "Puedes designar [guardians|E] para tus hijos.$action_can_assign_guardian_to_dynasty_kid_HELP$"
@@ -33,9 +33,9 @@
   action_can_set_education_focus_to_dynasty_kid: "El niño necesita un [education_focus|E]"
   action_can_set_education_focus_to_dynasty_kid_label: "[recipient.GetShortUINameNoTooltip] necesita un enfoque educativo"
   action_can_set_education_focus_to_dynasty_kid_desc: "Puedes elegir un [education_focus|E] para [recipient.GetShortUIName].\n\n$FOCUS_BELOW_MIN_AGE$N"
-  action_can_set_education_focus_to_dynasty_kid_combined_group_label: "Los niños de la dinastía necesitan un enfoque educativo"
+  action_can_set_education_focus_to_dynasty_kid_combined_group_label: "Los niños necesitan un enfoque educativo"
   action_can_set_education_focus_to_dynasty_kid_combined_group_name: "Los hijos necesitan un [education_focus|E]."
-  action_can_set_education_focus_to_dynasty_kid_combined_group_description: "Puedes elegir [education_focus|E] para los niños de tu dinastía."
+  action_can_set_education_focus_to_dynasty_kid_combined_group_description: "Puedes elegir [education_focus|E] para los niños."
   action_can_set_education_focus_to_dynasty_kid_combined_label: "Tu [actor.Custom2('RelationToMe', recipient)], [recipient.GetShortUINameNoTooltip]"
   action_can_set_education_focus_to_dynasty_kid_click: "#I Haz clic para elegir un [education_focus|E] para [recipient.GetHerHim]#!"
   action_dynasty_member_can_be_landed: "[recipient.GetShortUINameNoTooltip] puede obtener posesiones"
@@ -102,12 +102,18 @@
   alertmanager_widget_hook_tooltip: ""
   alertmanager_widget_education: "Habilitar alertas de educación"
   alertmanager_widget_education_tooltip: ""
-  alertmanager_widget_educationdynasty: "$alertmanager_widget_marriagedynasty$"
-  alertmanager_widget_educationdynasty_tooltip: ""
-  alertmanager_widget_gardian: "Asignar [guardians|El]"
-  alertmanager_widget_gardian_tooltip: ""
-  alertmanager_widget_focus: "Para modificar el [education_focus|El]"
-  alertmanager_widget_focus_tooltip: ""
+  alertmanager_widget_education_dynasty: "$alertmanager_widget_marriagedynasty$"
+  alertmanager_widget_education_dynasty_tooltip: ""
+  alertmanager_widget_gardian_dynasty: "Asignar [guardians|El]"
+  alertmanager_widget_gardian_dynasty_tooltip: ""
+  alertmanager_widget_focus_dynasty: "Para modificar el [education_focus|El]"
+  alertmanager_widget_focus_dynasty_tooltip: ""
+  alertmanager_widget_education_courtier: "$alertmanager_widget_marriagecourtier$"
+  alertmanager_widget_education_courtier_tooltip: ""
+  alertmanager_widget_gardian_courtier: "$alertmanager_widget_gardian_dynasty$"
+  alertmanager_widget_gardian_courtier_tooltip: ""
+  alertmanager_widget_focus_courtier: "$alertmanager_widget_focus_dynasty$"
+  alertmanager_widget_focus_courtier_tooltip: ""
   alertmanager_widget_marriage: "Habilitar alertas de [marriage|El]"
   alertmanager_widget_marriage_tooltip: ""
   alertmanager_widget_marriagedynasty: "Para los miembros de tu [dynasty|El]"
@@ -118,10 +124,24 @@
   alertmanager_widget_marriageadult_tooltip: ""
   alertmanager_widget_marriagecourtier: "Para los miembros de su [court|El]"
   alertmanager_widget_marriagecourtier_tooltip: ""
-  alertmanager_widget_marriagecourtier_unworthy: "Sólo [courtiers|El] con rasgos [congenital|El]"
-  alertmanager_widget_marriagecourtier_unworthy_tooltip: ""
-  alertmanager_widget_marriagecourtier_infertile: "Ignorar cortesanos infértiles"
-  alertmanager_widget_marriagecourtier_infertile_tooltip: ""
+
+  #alertmanager_widget_marriagecourtier_unworthy: "Sólo [courtiers|El] con rasgos [congenital|El]"
+  #alertmanager_widget_marriagecourtier_unworthy_tooltip: ""
+  #alertmanager_widget_marriagecourtier_infertile: "Ignorar cortesanos infértiles"
+  #alertmanager_widget_marriagecourtier_infertile_tooltip: ""
+
+  alertmanager_widget_marriagedynasty_closefamily: "Only [close_family|El]"
+  alertmanager_widget_marriagedynasty_closefamily_tooltip: ""
+  alertmanager_widget_marriageboy: "For men"
+  alertmanager_widget_marriageboy_tooltip: ""
+  alertmanager_widget_marriagegirl: "For women"
+  alertmanager_widget_marriagegirl_tooltip: ""
+
+  alertmanager_widget_marriage_unworthy: "Only with traits [congenital|El]"
+  alertmanager_widget_marriage_unworthy_tooltip: ""
+  alertmanager_widget_marriage_infertile: "Ignore infertile courtiers"
+  alertmanager_widget_marriage_infertile_tooltip: ""
+
   alertmanager_widget_give_lands: "Activa las alertas para dar [titles|El] a los miembros de tu [dynasty|El]"
   alertmanager_widget_give_lands_tooltip: ""
   alertmanager_widget_convert: "Habilitar alertas de conversión"
@@ -134,5 +154,10 @@
   alertmanager_widget_convert_subvassal_tooltip: ""
   alertmanager_widget_convert_baron: "Ignorar [barons|E] y alcaldes"   
   alertmanager_widget_convert_baron_tooltip: ""
-  alertmanager_widget_witchcraft: "Activa alertas para convencer a tu [dynasty|El] de adorar al Dios Astado."
+  alertmanager_widget_witchcraft: "Habilite las alertas para convertir su [dynasty|El] en [GetTrait('witch').GetName( GetPlayer )]"
   alertmanager_widget_witchcraft_tooltip: ""
+  alertmanager_widget_witchcraftwithcoven: "Y continuar después de la creación de la Aquelarre"
+  alertmanager_widget_witchcraftwithcoven_tooltip: ""
+
+alertmanager_widget_invite_knights: "Invitar a mejores caballeros"
+alertmanager_widget_invite_knights_tooltip: "Hay caballeros disponibles para invitación que son mejores que tu peor caballero."
